--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ h2 {
 
 #github_img {
     height: 5em;
+    width: 5em;
 }
 
 #title {
@@ -66,18 +67,20 @@ input {
 }
 
 .parent {
-    column-count: 4;
-    column-gap: 1em;
+    column-count: 3;
+    margin: 2em 2em 2em 2em;
+    column-width: 30em
 }
 
 .pin_card {
     display: inline-block;
-    margin: 3em 3em 3em;
+    margin: 1em 1em 1em;
     width: 100%;
 }
 
 img {
     cursor: pointer;
+    width: 95%
 }
 
 .delete_post {
