fixed small typo

--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ img {
     cursor: pointer;
 }
 
-.confirm_delettion {
+.confirm_deletion {
     background-color: #1f1f1f;
     border: 2px solid red;
     color: red;
